--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 django = "^5.0.2"
 djangorestframework = "^3.14.0"
 djangorestframework-jwt = "^1.11.0"
+celery = "^5.3.6"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [build-system]
