--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.14.0"
 djangorestframework-jwt = "^1.11.0"
 celery = "^5.3.6"
 djangorestframework-simplejwt = "^5.3.1"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
